--- a/lapzone/requirements.txt
+++ b/lapzone/requirements.txt
@@ -3,8 +3,8 @@ django-allauth==0.52.0
 django-ckeditor==6.5.1
 django-js-asset==2.0.0
 django-recaptcha3==0.4.0
-gunicorn>=20.0,<21.0
+gunicorn==20.1.0
 psycopg2==2.9.5
 python-dotenv==1.0.0
 pytz==2023.3
-whitenoise[brotli]>=6.0,<7.0
+whitenoise==6.4.0
