--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-ckeditor==6.5.1
 django-js-asset==2.0.0
 django-recaptcha3==0.4.0
 gunicorn==20.1.0
+Pillow==9.4.0
 psycopg2==2.9.5
 python-dotenv==1.0.0
 pytz==2023.3
